Updated the index page for the spring 2020 semester

--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -79,7 +79,7 @@
 		<a href="F16/117F16.HTM">F16</a>, 
 		<a href="F15/117F15.HTM">F15</a>, 
 		<a href="S15/117S15.HTM">S15</a>, 
-        <a href="S14/117S14.HTM">S14</a>,<br><br>
+        <a href="S14/117S14.HTM">S14</a><br><br>
 		
 		EGR 170, Engineering Programming For Instrumentation and Automation<br>
 		<a href="S19/170S19.HTM">S19</a><br><br>
@@ -138,6 +138,7 @@
 		 
 		EGR 304, Embedded Microcontroller Systems (with a lab)<br>
 		Prior to spring of 2008 this course was titled "Microprocessor Interfacing."<br>
+		<a href="S20/304S20.HTM">S20</a>, 
 		<a href="S17/304S17.HTM">S17</a>, 
 		<a href="S16/304S16.HTM">S16</a>, 
 		<a href="S15/304S15.HTM">S15</a>, 
@@ -183,7 +184,7 @@
 		<a href="S11/323S11.HTM">S11</a>, 
 		<a href="S09/323S09.HTM">S09</a>, 
 		<a href="S07/323S07.HTM">S07</a>, 
-		<a href="S05/323S05.HTM">S05</a>,<br><br>
+		<a href="S05/323S05.HTM">S05</a><br><br>
 		
 		EGR 360, Introduction to Power System Analysis<br>
 		<a href="F15/360F15.HTM">F15</a>, 
