--- a/index_F19.html
+++ b/index_F19.html
@@ -99,11 +99,11 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <HR>
 <br>
 <a name="Office_Hours"></a>
-<H1>Office Hours, Spring 2020</H1>
+<H1>Office Hours, Fall 2019</H1>
 <blockquote>
-     1:00 PM &ndash; 1:50 PM Wednesdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
+     9:25 AM &ndash; 10:40 PM Tuesdays and Thursdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
 	 
-     Meet me in person or via phone.<br>
+     Meet me in person or via phone, chat, etc.  <br>
      Call me!  x6245 or 712-722-6245  No appointment to call is needed.<br>
 	 <small>&nbsp;&nbsp;&nbsp;(I like the telephone. Call 
         all you want.  It is very convenient for both of us.)</small><br><br>
@@ -127,7 +127,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      or elsewhere and want to talk, just <i>pick up your phone and 
      call</i>. <BR><br> 
 
-     Here is Prof. De Boer's general <b><A HREF="S20/SCH_S20.pdf" 
+     Here is Prof. De Boer's general <b><A HREF="F19/SCH_F19.pdf" 
      >Weekly Schedule</A></b>.<br>
 	 Professor De Boer is now working for Dordt University on a half-time basis.
 	 </blockquote><br>
@@ -140,14 +140,20 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Courses"></a><br>
 <H1>Courses</H1>
 
-<p>In the Spring of 2020 I am teaching one course: </p>
+<p>In the Fall of 2019 I am teaching two courses: </p>
 
 <Blockquote><font face="verdana" size="2">
-<!--EGR 304-->
-     <A HREF="https://dordt.instructure.com/courses/2662877">
+<!--EGR 204-->
+     <A HREF="https://dordt.instructure.com/courses/2573771">
      <font color="#0099FF">C</font></A>
-     <a href="S20/304S20.HTM"
-     >EGR 304&nbsp; Embedded Microprocessor Systems (with a lab)</b></a><br>
+     <a href="F19/204F19.HTM"
+     >EGR 204&nbsp; Microprocessors and Digital Circuits (with a lab)</b></a><br>
+
+<!--EGR 363-->
+     <A HREF="https://dordt.instructure.com/courses/2574845">
+     <font color="#0099FF">C</font></A>
+     <a href="F19/363F19.HTM"
+     >EGR 363&nbsp; Introduction to Communication Systems</b></a><br>
 
      <Blockquote><small>
      Note 1: Professor De Boer welcomes 
@@ -177,10 +183,6 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      EGR 170&nbsp; Engineering Programming
      <A HREF="S19/170S19.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
-	 
-	 EGR 204&nbsp; Microprocessors and Digital Circuits (with a lab)
-     <a href="F19/204F19.HTM" style=text-decorations; none"
-     ><b><font color="#CC9900">*</font></b></A><br>
 
      EGR 220&nbsp; Linear Circuits and Electronics (with a lab)
      <A HREF="S18/220S18.HTM" style="text-decoration: none"
@@ -203,7 +205,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      ><b><font color="#CC9900">*</font></b></A><br>
 
      EGR 363&nbsp; Introduction to Communication Systems
-     <A HREF="F19/363F19.HTM" style="text-decoration: none"
+     <A HREF="F17/363F17.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
 
      MATH 204&nbsp; Differential Equations
@@ -400,7 +402,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 		</a> 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
-	    De Boer is a member of the <A HREF = "http://www.christianengineering.org/"
+	    De Boer supports the <A HREF = "http://www.christianengineering.org/"
 	    >Christian Engineering Society</A><br><br>
     </div></td>
 </tr>
@@ -443,7 +445,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 1/02/2020.</small><BR><br><br>&nbsp;
+<small>This page last edited on 8/22/2019.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR></TABLE>
