--- a/S20/304S20.HTM
+++ b/S20/304S20.HTM
@@ -30,7 +30,8 @@ TABLE {
              Dordt College Engineering Department                </A><BR>
                                                                      <BR>
          EMBEDDED MICROCONTROLLER SYSTEMS, EGR 304                   <BR>
-                       SPRING 2017                           </b><br></P>
+                       SPRING 2017                           </b><br>
+					   This page is out-of-date.  <BR>A new page for the spring 2020 course will be here soon</P>
                                                        </td></tr></table>
 <table align="center" width=420><tr>
 <!-- TEXTBOOK -->
@@ -109,11 +110,11 @@ The Canvas@Dordt portal provides everything in this frame and
 more.</small><br><br>
 
 
-<a href="../S16/304S16.HTM">
+<a href="../S17/304S17.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
 offering of this course 
-<a href="../S20/304S20.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0">
+<!-- <a href="../S18/304S18.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"> -->
 <BR> 
 
 </small></P> 
