Updated textbook requisitions for Spring 2020

--- a/Texts.htm
+++ b/Texts.htm
@@ -36,7 +36,7 @@
    <p align="center"><a href="index.html"
             >Professor De Boer's</a> Textbook Requisitions</b></p>
                                                        <p align="center">
-          (Last updated on Monday, May 23, 2019)</p><p>
+          (Last updated on Thursday, January 2, 2020)</p><p>
    
    The links below will show you which textbooks Professor De Boer has 
    ordered for each of his courses.  (For ISBNs and full details, click 
@@ -51,39 +51,27 @@
    to get back to this page from one of the requisition pages linked below.
    <br><br>
 
-   <br><u><b>Fall 2019 courses</b></u>
+   <br><u><b>Spring 2020 course</b></u>
    </td></tr></table>
    
    
    <table align="center" width="520" border="0" cellpadding="0">
  
- <!--EGR 204--> 
-   <tr><td colspan="2"><a href="F19/204/204F19_Textbook_Requisitions.htm">
-       EGR 204, Intro. to Microprocessors and Digital Circuits (with lab)</a></td></tr>
+ <!--EGR 304--> 
+   <tr><td colspan="2"><a href="S20/304/304S20_Textbook_Requisitions.png">
+       EGR 304, Embedded Microprocessor Systems (with lab)</a></td></tr>
    <tr><td width="120">
-       <a href="F19/204/204F19_Textbook_Requisitions.htm">
-       <img src="F19/204/ManoKimeMartin5Cover100x132_0133760634.png" style="border-style: none"/>
+       <a href="S20/304/304S20_Textbook_Requisitions.png">
+       <img src="S20/304/WWW.JPG" style="border-style: none"/>
        <br><br></td>
        <td valign="top">
-       Mano, Kime, &amp; Martin<br>
-       Logic and Computer Design Fundamentals, 5th ed.<br>
-       ISBN and important details <a href="F19/204/204F19_Textbook_Requisitions.htm">here</a>   
+	   Resources from the World Wide Web will be used.<br>
+	   Students will not need to purchase a textbook.<br>
+	   An <a href="https://ncees.org/exams/calculator/">NCEES-approved calculator</a> will be needed for tests.<br>
+       Official requisition <a href="S20/304/304S20_Textbook_Requisitions.png">here</a><br>
+	     
    </td></tr>
 	
-   <!--EGR 363--> 
-   <tr><td colspan="2"><a href="F19/363/363F19_Textbook_Requisitions.htm">
-       EGR 363, Introduction to Communication Systems</a></td></tr><tr>
-   <td width="120">
-       <a href="F19/363/363F19_Textbook_Requisitions.htm">
-       <img src="F19/363/Proakis_Salehi_Cover_116x163_tumbnail.jpg" width=100, height=140, style="border-style: none"/>
-       </td>
-       <td valign="top">
-	   Proakis and Salehi<br>
-	   <i>Fundamentals of Communication Systems</i>, 2nd ed.<br>
-       ISBN and important details <a href="F19/363/363F19_Textbook_Requisitions.htm">here</a>
-	   </td>
-   </tr>
-  
    <!--Horizontal Rule-->  
    <tr><td colspan="2"><br>
    <hr style="width: 100%; height: 5px; color: #000; background-color: #000;" />
@@ -93,6 +81,12 @@
 </table>
 <table align="center" width="520" border=0 cellpadding=0><tr><td><small>
    <b>Past Courses Instructed by Professor De Boer</b><br><br>
+
+   <br><u><b>Fall 2019 courses</b></u><br>
+   <a href="F19/204/204F19_Textbook_Requisitions.htm">
+      EGR 204, Into. to Microprocessors and Digital Circuits (with lab)</a><br>
+   <a href="F19/363/363F19_Textbook_Requisitions.htm">
+      EGR 363, Introduction to Communication Systems</a><br>
 
    <br><u><b>Spring 2019 courses</b></u><br>
    <a href="S19/170/170S19_Textbook_Requisitions.htm">
