--- a/S20/304S20.HTM
+++ b/S20/304S20.HTM
@@ -31,19 +31,18 @@ TABLE {
                                                                      <BR>
          EMBEDDED MICROCONTROLLER SYSTEMS, EGR 304                   <BR>
                        SPRING 2020                           </b><br>
-					   This page is out-of-date.  <BR>A new page for the spring 2020 course will be here soon</P>
                                                        </td></tr></table>
 <table align="center" width=420><tr>
 <!-- TEXTBOOK -->
 <td align="center" valign="bottom" width=130>
-   <a href="../S17/304/304S17PS.HTM" target="_top">
+   <a href="../S20/304/304S20PS.HTM" target="_top">
    <img width="120" height="80"
            alt="No textbook required" 
            hspace="0" 
-           src="../S17/304/WWW.JPG" 
+           src="../S20/304/WWW.JPG" 
            border="0">
    </A> 
-   <a href="../S17/304/304S17PS.HTM" target="_top">
+   <a href="../S20/304/304S20PS.HTM" target="_top">
    <b>Readings from the Web</b></a>
 </td>
 
@@ -52,7 +51,7 @@ TABLE {
    <A HREF="../index.html" target="_top">
       <img width="135" height="165" 
            alt="'click'-->to De Boer's homepage" hspace="0" 
-           src="../S17/304/DeBoer_2016_135x165.jpg" 
+           src="../S20/304/DeBoer_2016_135x165.jpg" 
            border="0" ><br>
    </A>
    <A HREF="../index.html" target="_top">
@@ -62,14 +61,14 @@ TABLE {
 
 <!-- LAB EQUIPMENT -->
 <td align="center" valign="bottom" width=137>
-   <A HREF="https://www.raspberrypi.org/" 
+   <A HREF="http://www.arduino.cc/" 
       target="_top">
-      <img width="80" height="101" 
+      <img width="150" height="111" 
          alt="'click'-->to Arduino page" hspace="0" 
-         src="../S17/304/R-Pi_Logo_80x101.gif" 
+         src="../S20/304/ARDUINO.GIF" 
          border="0" ><br>
    </A>
-   <A HREF="https://www.raspberrypi.org/" 
+   <A HREF="http://www.arduino.cc/" 
       target="_top">
       <b>Lab Equipment</b>&nbsp;
    </a><br><br>
@@ -78,7 +77,7 @@ TABLE {
 <table align="center" width="420"><tr><td>
 
 <!-- HOMEWORK -->
-<P style="text-align: center;"><br><A HREF="../S17/304/304S17PS.HTM" target="_top" 
+<P style="text-align: center;"><br><A HREF="../S20/304/304S20PS.HTM" target="_top" 
    >Homework Assignments</A><BR><br>
    All course work must conform to these <A 
    HREF="../integrity.htm" target="_top"
@@ -86,7 +85,7 @@ TABLE {
 </P> 
 
 <!-- SYLLABUS -->
-<P style="text-align: center;"><A HREF= "../S17/304/egr304sYLLABUS2017s_304S17SY.PDF" target="_top"
+<P style="text-align: center;"><A HREF= "../S20/304/EGR304_01Syllabus2020S_De_Boer_304S20SY.pdf" target="_top"
                      >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc. <br></P> 
 
