Fixing broken links, ../../ddb/notes00.htm to ../../ddb/NOTES.HTM etc.

--- a/F02/204F02.HTM
+++ b/F02/204F02.HTM
@@ -8,7 +8,7 @@
   INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS, EGR 204
                            (Fall 2002)
 
-Click this <A HREF="noteF02.htm">note on cached pages and handouts</A> if you are 
+Click this <A HREF="NOTEF02.HTM">note on cached pages and handouts</A> if you are 
 having difficulty seeing the latest version of this page.
 
 MAX+PLUS II Student Edition Software for simulating digital 
