--- a/F03/204F03.HTM
+++ b/F03/204F03.HTM
@@ -14,7 +14,7 @@ the video.
 
 The <A HREF="204F03SY.DOC">course syllabus</A> is available as an MS Word document. 
 
-Click this <A HREF="noteF03.htm">note on cached pages and handouts</A> if you are 
+Click this <A HREF="NOTEF03.HTM">note on cached pages and handouts</A> if you are 
 having difficulty seeing the latest version of this page.
 
 MAX+PLUS II Student Edition Software for simulating digital 
