--- a/F06/220/220F06PS.HTM
+++ b/F06/220/220F06PS.HTM
@@ -299,6 +299,6 @@ might change, but problems shown will eventually be assigned.
 
 Note 4) If you are having difficulty reading the latest version 
 of this page it may have to do with your browser's cached memory. 
-Read this <a href="../../ddb/notes00.htm">note on cached pages</a> to solve the problem. 
+Read this <a href="../../ddb/NOTES00.HTM">note on cached pages</a> to solve the problem. 
 
 </pre></body></html>
