--- a/S04/304S04.HTM
+++ b/S04/304S04.HTM
@@ -8,7 +8,7 @@
                MICROPROCESSOR INTERFACING -- EGR 304
                           (Spring 2004)
 
-Click this <A HREF="../ddb/notes00.htm">note on cached pages and handouts</A> if you are 
+Click this <A HREF="../ddb/NOTES00.HTM">note on cached pages and handouts</A> if you are 
 having difficulty seeing the latest version of this page.
 
 Homework must adhere to reasonable <A HREF =
