--- a/S05/204S05.HTM
+++ b/S05/204S05.HTM
@@ -18,7 +18,7 @@ As of PS #15 the MAX/AVG/MIN raw homework grades in this class are
 As of 2/25/05 seventeen out of twenty-two students have 
 successfully demonstrated their lab projects.  (Posted 2/25/05)
 
-Click this <A HREF="../ddb/notes00.htm">note on cached pages and handouts</A> if you are
+Click this <A HREF="../ddb/NOTES00.HTM">note on cached pages and handouts</A> if you are
 having difficulty seeing the latest version of this page. 
 (posted 1/12 at 4:31 pm)
 
