--- a/S06/204/204S06PS.HTM
+++ b/S06/204/204S06PS.HTM
@@ -574,7 +574,7 @@ might change, but problems shown will eventually be assigned.
 Note 4) If this page seems to be out-of-date and you think it 
 should have been updated then there may be a problem with your 
 browser's cached memory. Read this <A HREF= 
-"../../ddb/notes00.htm">note on cached pages</A> to 
+"../../ddb/NOTES00.HTM">note on cached pages</A> to 
 solve the problem. </PRE> 
 
 <A           HREF = "../../index.html"> Back to 
