--- a/S06/304/304S06PS.HTM
+++ b/S06/304/304S06PS.HTM
@@ -142,7 +142,7 @@ might change, but problems shown will eventually be assigned.
 Note 3) If you are having difficulty reading the latest version
 of this page it may have to do with your browser's cached memory.
 Read this <A HREF=
-"../../ddb/notes00.htm">note on cached pages</A> to solve the 
+"../../ddb/NOTES00.HTM">note on cached pages</A> to solve the 
 problem. 
 
 Note 4) Class did not meet on 1/19 due to the ASME tour.  Thus
