--- a/S08/204/204S08PS.HTM
+++ b/S08/204/204S08PS.HTM
@@ -1255,7 +1255,7 @@ Note 5)
 If this page seems to be out-of-date and you think it should have 
 been updated, there may be a problem with your browser's cache.  
 Read this <a 
-href="../../ddb/notes00.htm"
+href="../../ddb/NOTES00.HTM"
          >note on cached pages</a> to solve the problem. 
 
                                                    </P></TD></TR>
