--- a/S09/104/104S09PS.HTM
+++ b/S09/104/104S09PS.HTM
@@ -438,7 +438,7 @@ Note 4)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="http://homepages.dordt.edu/~ddeboer/ddb/notes00.htm">note on 
+href="https://dfdeboer.github.io/ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                                                    </P></TD></TR>
