--- a/S12/204/204S12PS.HTM
+++ b/S12/204/204S12PS.HTM
@@ -1420,7 +1420,7 @@ Note 5)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="../../ddb/notes00.htm">note on 
+href="../../ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                                                    </P></TD></TR>
