--- a/S14/304/304S14PS.HTM
+++ b/S14/304/304S14PS.HTM
@@ -596,7 +596,7 @@ Note 3)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="http://homepages.dordt.edu/~ddeboer/ddb/notes00.htm">note on 
+href="../../ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                                                    </P></TD></TR>
