--- a/S17/220/220S17PS.HTM
+++ b/S17/220/220S17PS.HTM
@@ -1515,7 +1515,7 @@ Note 5)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="http://homepages.dordt.edu/~ddeboer/ddb/notes00.htm">note on 
+href="http://homepages.dordt.edu/~ddeboer/ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                                                  <a name="Note5">
