--- a/F10/322/322F10PS.HTM
+++ b/F10/322/322F10PS.HTM
@@ -433,7 +433,7 @@ Note 8)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="../../ddb/notes00.htm">note on 
+href="../../ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                          <BR><BR><TR><TD width="60" valign="top">
