--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -929,7 +929,7 @@ Note 5)
                                                         </TD><TD>
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
-this <a href="../../ddb/notes00.htm">note on 
+this <a href="../../ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                          <BR><BR><TR><TD width="60" valign="top">
