--- a/S03/304S03.HTM
+++ b/S03/304S03.HTM
@@ -8,7 +8,7 @@
                MICROPROCESSOR INTERFACING -- EGR 304
                           (Spring 2003)
 
-Click this <A HREF="../ddb/notes00.htm">note on cached pages and handouts</A> if you are 
+Click this <A HREF="../ddb/NOTES00.HTM">note on cached pages and handouts</A> if you are 
 having difficulty seeing the latest version of this page.
 
           VARIOUS LINKS WITH INFO RELATED TO THIS COURSE
