--- a/S11/304/304S11PS.HTM
+++ b/S11/304/304S11PS.HTM
@@ -499,7 +499,7 @@ Note 3)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="../../ddb/notes00.htm">note on 
+href="../../ddb/NOTES00.HTM">note on 
 cached pages</a> to solve the problem. 
 
                                                    </P></TD></TR>
