Updated PS#1, EGR 304

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -109,12 +109,11 @@ A:hover {
 		Since this was an elec- tronic sub- miss- ion, no 
 		physical item to return
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Read "<a href=
-        "http://en.wikipedia.org/wiki/Embedded_system"
-        >Embedded system</a>" from Wikipeadia           <BR>&nbsp;
-        Read "<a href=
-        "https://en.wikipedia.org/wiki/System_on_a_chip"
-        >System on a Chip</a> from Wikipedia"           <BR>&nbsp;
+        Read the Preface and Chapter 1 from the         <br>&nbsp;
+		Lee &amp; Seshia <a href=        "http://en.wikipedia.org/wiki/Embedded_system"
+        >textbook</a>.                                  <BR>&nbsp;
+		View "<a href="https://www.coursera.org/lecture/introduction-embedded-systems/7-development-environments-overview-M7l6H"
+		           >Development Environments Overview</a>"<br>&nbsp;
         Briefly browse <a href=
         "http://arduino.cc/en/Guide/HomePage"
              >Getting Started with Arduino.</a>         <br>&nbsp;
