--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -103,7 +103,7 @@ A:hover {
         1/13
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        1/17<!--<a href=
+        &nbsp;<!--1/17<!--<a href=
         "https://dordt.instructure.com/files/80063195/download?download_frd=1"
         >1/21</a>--><br><br>
 		Since this was an elec- tronic sub- miss- ion, no 
