College --> University on EGR 304 PS#1, also Microcomputer --> Microcontroller on HW page

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -39,7 +39,7 @@ A:hover {
                    <A HREF="../../redirect/Dordt_Engineering.htm"
 
          >DORDT COLLEGE ENGINEERING DEPARTMENT        </A><BR><B>
-        EMBEDDED MICROCOMPUTER SYSTEMS--EGR 304<BR>
+        EMBEDDED MICROCONTROLLER SYSTEMS--EGR 304<BR>
                        (Spring 2020)                     </B></P>
 
                    <P style="text-align:center; margin-top: 10px; 
