Changed textbook image and links to Lee and Seshia 2e

--- a/S20/304S20.HTM
+++ b/S20/304S20.HTM
@@ -35,15 +35,15 @@ TABLE {
 <table align="center" width=420><tr>
 <!-- TEXTBOOK -->
 <td align="center" valign="bottom" width=130>
-   <a href="../S20/304/304S20PS.HTM" target="_top">
-   <img width="120" height="80"
-           alt="No textbook required" 
+   <a href="https://ptolemy.berkeley.edu/books/leeseshia/" target="_top">
+   <img width="120" height="160"
+           alt="Lee &amp; Seshia, <i>Intro to Embedded Systems" 
            hspace="0" 
-           src="../S20/304/WWW.JPG" 
+           src="../S20/304/Lee_Seshia_2e_thumbnail_120x160.png" 
            border="0">
    </A> 
-   <a href="../S20/304/304S20PS.HTM" target="_top">
-   <b>Readings from the Web</b></a>
+   <a href="https://ptolemy.berkeley.edu/books/leeseshia/" target="_top">
+   <b>Textbook</b><br>&nbsp;</a>
 </td>
 
 <!-- PROF DE BOER -->
