Published the slide index for EGR 304

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -38,7 +38,7 @@ A:hover {
                                                <p align="center">
                    <A HREF="../../redirect/Dordt_Engineering.htm"
 
-         >DORDT COLLEGE ENGINEERING DEPARTMENT        </A><BR><B>
+         >DORDT UNIVERSITY ENGINEERING DEPARTMENT        </A><BR><B>
         EMBEDDED MICROCONTROLLER SYSTEMS--EGR 304<BR>
                        (Spring 2020)                     </B></P>
 
