--- a/S20/304S20.HTM
+++ b/S20/304S20.HTM
@@ -23,16 +23,16 @@ TABLE {
 </HEAD>
                                                                    <BODY>
 <!--  INSTRUCTURE START CUT HERE --------------------------------------->
-                               <table align="center" width="420"><tr><td>
+                               <table align="center" width="480"><tr><td>
                                <P style="text-align: center;"><B><A HREF=
                                       "../redirect/Dordt_Engineering.htm"
                                                            target="_top">
-             Dordt College Engineering Department                </A><BR>
+             Dordt University Engineering Department                </A><BR>
                                                                      <BR>
          EMBEDDED MICROCONTROLLER SYSTEMS, EGR 304                   <BR>
                        SPRING 2020                           </b><br>
                                                        </td></tr></table>
-<table align="center" width=420><tr>
+<table align="center" width=480><tr>
 <!-- TEXTBOOK -->
 <td align="center" valign="bottom" width=130>
    <a href="https://ptolemy.berkeley.edu/books/leeseshia/" target="_top">
@@ -74,7 +74,7 @@ TABLE {
    </a><br><br>
 </td></tr></table>
 
-<table align="center" width="420"><tr><td>
+<table align="center" width="480"><tr><td>
 
 <!-- HOMEWORK -->
 <P style="text-align: center;"><br><A HREF="../S20/304/304S20PS.HTM" target="_top" 
