Added turn-in link for EGR 304 PS#1

--- a/ddb/EE_LAB/electronics_lab_page.htm
+++ b/ddb/EE_LAB/electronics_lab_page.htm
@@ -30,9 +30,9 @@ TABLE {
                                                  <A target="_top"
      HREF="http://www.dordt.edu/academics/programs/engineering/">
 
-    Dordt College Engineering Department</A>                 <BR>
+    Dordt University Engineering Department</A>                 <BR>
                                                              <BR>
-       GUIDE TO DORDT COLLEGE'S ELECTRONICS LAB          </b><BR>
+       GUIDE TO DORDT UNIVERSITY'S ELECTRONICS LAB          </b><BR>
 <!-- <small><i>The old version of this guide is <a href="electronics_lab_page_old.htm">here</a></i></small> --> 
                                                          </B></P>
                                   <p style="text-align: center;">
