Fixed a broken link to EGR 304 textbook

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -49,7 +49,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/09/2020 8:15 pm)
+                              >(Last update: 1/09/2020 8:31 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -110,7 +110,7 @@ A:hover {
 		physical item to return
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Read the Preface and Chapter 1 from the         <br>&nbsp;
-		Lee &amp; Seshia <a href=        "http://en.wikipedia.org/wiki/Embedded_system"
+		Lee &amp; Seshia <a href=        "https://ptolemy.berkeley.edu/books/leeseshia/"
         >textbook</a>.                                  <BR>&nbsp;
 		View "<a href="https://www.coursera.org/lecture/introduction-embedded-systems/7-development-environments-overview-M7l6H"
 		           >Development Environments Overview</a>"<br>&nbsp;
