--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -93,13 +93,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  &nbsp;<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      &nbsp;<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+      &nbsp;<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/162005109/download?download_frd=1"><!-- -->
       1/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color="grey">(First day of class)</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Intro, Microprocessor vs. Microcontroler vs SoC, trends <font color="grey">(First day of class)</font><!--end comment--></td>  
    </TR><!-- Week of 1/13------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
