--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -49,7 +49,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/09/2020 8:31 pm)
+                              >(Last update: 1/13/2020 11:05 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -79,18 +79,26 @@ A:hover {
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
-&nbsp;
+ 2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        1/13
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
+        1/17
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--2/14<br><br>
+        &nbsp;
+		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-
+		Topics:  Version control of software         <br>&nbsp;
+		Read:  Classroom slides                        <br>&nbsp;
+		This assignment is designed to be worked mostly<br>&nbsp;
+		during the lab on Wed. 1/15.                   <br>&nbsp;
+		                                               <br>&nbsp;
+		Follow this <a href="304S20P02.pdf">guide</a>. <br>&nbsp;
+		Your finished work will be in d<small>DB</small>'s repo.<br>&nbsp;
+		No other work needs to be turned in.		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
