Published EGR 304 slides for the day, PS#3, added grideye and SKPL info to my CV file

--- a/CV.HTM
+++ b/CV.HTM
@@ -274,7 +274,8 @@
                   >Electric Vehicles</a><br>
         Communication Systems, Modulation Theory, <BR>
         Digital Signal Processing, <BR>
-        Digital Systems, Embedded Controllers <BR><BR></DIV>
+        Digital Systems, Embedded Controllers <BR>
+		Smart-Grid and Reliability, <a href= "http://fnetpublic.utk.edu/">FNET/GridEye</a> Project (FDM Host)<BR></DIV>
     </TD>
 </TR>
 
@@ -303,8 +304,10 @@
             (IEEE)</A> (Senior Member)<BR>&nbsp; &nbsp;
 			Chair of the <a href=
 			"http://www.siouxland.org/">Siouxland Section of the IEEE</a>, 
-			Aug. 2002 through Dec. 2003<br>
-				  
+			Aug. 2002 through Dec. 2003<br>&nbsp; &nbsp;
+			Region 4 Science Kits for Public Libraries (<a href=
+			"https://sciencekitsforpubliclibraries.org/">SKPL</a>) Application Chair, <br>&nbsp; &nbsp; &nbsp; &nbsp;
+			     August 2019 through present.<br> 
         <A HREF = "http://www.tbp.org">Tau Beta Pi</A>
                       (Inactive Member)<BR>
 					  
@@ -790,7 +793,7 @@
         <HR>
         <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 12/23/2019)</small></DIV>
+         <small>(This page last updated on 1/17/2020)</small></DIV>
     </TD>
 </TR>
 
