--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -106,13 +106,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/162206120/download?download_frd=1"><!-- -->
 	  1/13<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/162388020/download?download_frd=1"><!-- -->
-      1/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      1/17<!-- --</a><!-- --></td>
+      1/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/162545588/download?download_frd=1"><!-- -->
+      1/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Introduction to Git, Demonstration of a repository<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->More on Git, HEAD, branch, other commands<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Parallel Ports, Configuration of, I/O strategies, Arduino code examples of<!--end comment--></td>  
    </TR><!-- Week of 1/20------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
