Provided a better link to LED datasheet

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/17/2020 10:09 pm)
+                              >(Last update: 1/17/2020 10:21 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -110,6 +110,12 @@ DO {
 			   "http://www.ganssle.com/debouncing-pt2.htm"
 			                                   >p2</a>)<br>&nbsp; 
 		<DO>Do Problem Set #3 found</DO> <a href="304S20P03.docx">here</a>. <br>&nbsp;
+		LED (LTL4243) information you will need is <a href=
+		"https://media.digikey.com/pdf/Data%20Sheets/Lite-On%20PDFs/LTL-4234.pdf"
+		                                 >here</a>.    <br>&nbsp;
+		Use "Test Condition" or "Typical" data.        <br>&nbsp;
+		Nominal forward current is 10 mA.              <br>&nbsp;
+		(Abs. max. data is the verge of breakdown.)    <br>&nbsp;
 		Turn in your work on paper in class on Friday, 1/24		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
