--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -152,11 +152,11 @@ DO {
         1/13
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--1/17<!--<a href=
+        &nbsp;<!--1/17 <a href=
         "https://dordt.instructure.com/files/80063195/download?download_frd=1"
         >1/21</a>--><br><br>
-		Since this was an elec- tronic sub- miss- ion, no 
-		physical item to return
+		Since<br>this<br>was<br>an<br>elec-<br>tronic<br>sub-<br>miss-<br>ion,<br>no<br> 
+		physical<br>item<br>to<br>return
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Read the Preface and Chapter 1 from the         <br>&nbsp;
 		Lee &amp; Seshia <a href=        "https://ptolemy.berkeley.edu/books/leeseshia/"
@@ -217,7 +217,7 @@ this <a
 href="https://dfdeboer.github.io/ddb/NOTES18.HTM">note on 
 cached pages</a> to solve the problem. 
 
-                                                   </P></TD></TR>
+                                                       </TD></TR>
 </TABLE>
 </BODY>
 </HTML>
