EGR 304 daily slides update

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -119,13 +119,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/162704481/download?download_frd=1"><!-- -->
 	  1/20<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/162902598/download?download_frd=1"><!-- -->
-      1/22<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      1/24<!-- --</a><!-- --></td>
+      1/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/163011586/download?download_frd=1"><!-- -->
+      1/24<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->|| Ports on Arduino and R-Pi, Pos or neg-true drive, V- vs. I-driven loads<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Driving higher powered loads, MOSFETs &amp; BJTs as switches, flyback<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->More on flyback, debouncing switches, modeling sensors, decibels<!--end comment--></td>  
    </TR><!-- Week of 1/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
