EGR 304 PS#2 solutions posted

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/25/2020 6:34 pm)
+                              >(Last update: 1/27/2020 8:41 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -166,8 +166,10 @@ DO {
         1/17
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
-		
+        <a href=
+        "https://github.com/dfdeboer/PS-2/blob/master/Git_Commands_to_document.txt"
+        >1/27</a><br><br>
+		Results<br>shown<br>via<br>the<br>link<br>above
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Version control of software         <br>&nbsp;
 		Read:  Classroom slides                        <br>&nbsp;
