EGR 304 daily slides posted

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -132,22 +132,22 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/163152321/download?download_frd=1"><!-- -->
 	  1/27<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/163277640/download?download_frd=1"><!-- -->
-      1/29<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      1/31<!-- --</a><!-- --></td>
+      1/29<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/163387275/download?download_frd=1"><!-- -->
+      1/31<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Sensors: range, dyn range, precision, accuracy, models, single-ended<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Differential sources, diff inputs, connections, variations<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->A/D conversion: anti-aliasing, sampling, quantizing, audio demo<!--end comment--></td>  
    </TR><!-- Week of 2/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  2/03<!-- --</a><!-- --><br><!-- --<a href=
+	  2/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/05<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/07<!-- --</a><!-- --></td>
+      2/07<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
@@ -158,7 +158,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  2/10<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/12<!-- --></a><!-- --><br><!-- --<a href=
+      2/12<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/14<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -171,7 +171,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  2/17<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/19<!-- --></a><!-- --><br><!-- --<a href=
+      2/19<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -184,7 +184,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  2/24<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/26<!-- --></a><!-- --><br><!-- --<a href=
+      2/26<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/28<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -197,7 +197,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  3/02<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/04<!-- --></a><!-- --><br><!-- --<a href=
+      3/04<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       3/06<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -210,7 +210,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  3/09<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/11<!-- --></a><!-- --><br><!-- --<a href=
+      3/11<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       3/13<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -223,7 +223,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  3/16<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/18<!-- --></a><!-- --><br><!-- --<a href=
+      3/18<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       3/20<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -236,7 +236,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  3/23<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/25<!-- --></a><!-- --><br><!-- --<a href=
+      3/25<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       3/27<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -249,7 +249,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  3/30<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/01<!-- --></a><!-- --><br><!-- --<a href=
+      4/01<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -262,7 +262,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  4/06<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/08<!-- --></a><!-- --><br><!-- --<a href=
+      4/08<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -275,7 +275,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  4/13<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/15<!-- --></a><!-- --><br><!-- --<a href=
+      4/15<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/17<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -288,7 +288,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  4/20<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/22<!-- --></a><!-- --><br><!-- --<a href=
+      4/22<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/24<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
@@ -301,7 +301,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  4/27<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/29<!-- --></a><!-- --><br><!-- --<a href=
+      4/29<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       5/01<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
